tests/typing/bad/testfile-subscript-3.c

int main() { char c; c[1]; }
